--- a/configurations/2Stars1Planet40s.ini
+++ b/configurations/2Stars1Planet40s.ini
@@ -14,7 +14,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 1000                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 1005                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -114,20 +114,20 @@ i = 90.0                             # [deg] inclination. 90°: we see orbit edg
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
 # One of the following two parameters has to be provided.
-a = 2.5 * au                         # [m] semi-major axis
-;P = 3600 * 24 * 365.25               # [s] Period
+a = 4.5 * au                         # [m] semi-major axis
+#P = 3600 * 24 * 365.25              # [s] Period
 
 # Two of the following three parameters have to be provided:
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-;argument_of_periapsis = 0            # [deg] ω: argument of periapsis
+#argument_of_periapsis = 0           # [deg] ω: argument of periapsis
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
-;L = 0                                # [deg] mean longitude
+#L = 0                               # [deg] mean longitude
 nu = 40                              # [deg] true anomaly.
-;ma = 0                               # [deg] mean anomaly
-;ea = 0                               # [deg] eccentric anomaly
-;T = 0                                # [s] Time of periapsis
+#ma = 0                              # [deg] mean anomaly
+#ea = 0                              # [deg] eccentric anomaly
+#T = 0                               # [s] Time of periapsis
                                      # The absolute time of periapsis is start_date - T
 
 t = 0                                # [t] Optional additional time difference. Default=0.
