--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,7 +14,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 1000                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 1005                   # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -104,17 +104,17 @@ mass = 1.0 * m_earth                 # [kg]
 radius = 1.0 * r_earth               # [m]
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
-# startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
-# velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
+;startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
+;velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
 
 # -----  ORBITAL ELEMENTS  -----
 # Mandatory orbital elements:
-e = 0.1                              # [1] eccentricity
+e = 0.7                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
 
 # One of the following two parameters has to be provided.
-a = 2.5 * au                         # [m] semi-major axis
+a = 1.5 * au                         # [m] semi-major axis
 ;P = 3600 * 24 * 365.25               # [s] Period
 
 # Two of the following three parameters have to be provided:
