--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -104,8 +104,8 @@ mass = 1.0 * m_earth                 # [kg]
 radius = 1.0 * r_earth               # [m]
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
-;startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
-;velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
+#startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
+#velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
 
 # -----  ORBITAL ELEMENTS  -----
 # Mandatory orbital elements:
@@ -115,19 +115,19 @@ i = 90.0                             # [deg] inclination. 90°: we see orbit edg
 
 # One of the following two parameters has to be provided.
 a = 1.5 * au                         # [m] semi-major axis
-;P = 3600 * 24 * 365.25               # [s] Period
+#P = 3600 * 24 * 365.25               # [s] Period
 
 # Two of the following three parameters have to be provided:
 longitude_of_ascending_node = 0      # [deg] Ω: longitude of ascending node
 longitude_of_periapsis = 0           # [deg] ϖ: longitude of periapsis
-;argument_of_periapsis = 0            # [deg] ω: argument of periapsis
+#argument_of_periapsis = 0            # [deg] ω: argument of periapsis
 
 # One of the following five parameters has to be provided in order to specify the initial position on the orbit.
-;L = 0                                # [deg] mean longitude
+#L = 0                                # [deg] mean longitude
 nu = 40                              # [deg] true anomaly.
-;ma = 0                               # [deg] mean anomaly
-;ea = 0                               # [deg] eccentric anomaly
-;T = 0                                # [s] Time of periapsis
+#ma = 0                               # [deg] mean anomaly
+#ea = 0                               # [deg] eccentric anomaly
+#T = 0                                # [s] Time of periapsis
                                      # The absolute time of periapsis is start_date - T
 
 t = 0                                # [t] Optional additional time difference. Default=0.
