--- a/configurations/TIC470710327.ini
+++ b/configurations/TIC470710327.ini
@@ -1,117 +1,135 @@
-; Source: https://arxiv.org/pdf/2202.06964.pdf
-[DEFAULT]
-
 [Astronomical Constants]
-# you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * AU
-g  = 6.67430e-11            # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015
-au = 1.495978707e11         # [m]   <float> astronomical unit
-r_sun = 6.96342e8           # [m]   <float> sun radius
-m_sun = 1.98847e30          # [kg]  <float> sun mass +/- 0.00007
-l_sun = 3.83e26             # [W]   <float> solar luminosity
-r_jup = 7.1492e7            # [m]   <float> earth radius
-m_jup = 1.8981246e27        # [kg]  <float> earth mass
-r_earth = 6.378135e6        # [m]   <float> earth radius
-m_earth = 5.9720e24         # [kg]  <float> earth mass
-v_earth = 2.97852e4         # [m/s] <float> earth orbital velocity (if orbit was circular)
+# do not edit this section
+# you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * au
+g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015  This parameter must be defined here!
+au = 1.495978707e11          # [m]   <float> astronomical unit
+r_sun = 6.96342e8            # [m]   <float> solar radius
+m_sun = 1.98847e30           # [kg]  <float> solar mass +/- 0.00007
+l_sun = 3.83e26              # [W]   <float> solar luminosity
+r_jup = 7.1492e7             # [m]   <float> Jupiter radius
+m_jup = 1.8981246e27         # [kg]  <float> Jupiter mass
+r_earth = 6.378135e6         # [m]   <float> Earth radius
+m_earth = 5.9720e24          # [kg]  <float> Earth mass
+v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
-[Video]
-video_file = animations/TIC470710327_new.mp4  # <string> the resulting video is saved with this file name
-frames = 30               # <int>   number of frames of video. Proportional to this program's run time and to the lenght of the animation.
-fps = 30                  # <int>   frames per second in video. Proportional to the velocity of the objects in the animation. Inverse proportional to lenght of video.
-dt = 60                   # [s] <int>   time difference between iterations. Proportional to the velocity of the objects in the animation. Needs to be small in order to calculate accurately when objects are near to each other.
-sampling_rate = 6         # <int>   Calculating the physics is much faster than animating it. Therefore only 1/sampling_rate of the calculated iterations is used as frame in the animation.
+[Video]                      # This section controls length and quality of the simulation and the resulting video.
+video_file = ../animations/TIC470710327.mp4  # <string> the resulting video is saved in this file
+frames = 200                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+                             # and to the length of the animation.
+fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
+                             # objects in the animation. Inverse proportional to length of video.
+dt = 600                    # [s] <int> real time difference between simulation iterations. Proportional to
+                             # the velocity of the objects in the animation. Needs to be small in order to
+                             # calculate with sufficient precision when objects are close to each other.
+                             # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
+                             # your orbits change after a few rotations then you probably need a smaller value.
+                             # dt * sampling_rate is the real time difference between 2 frames in the animation.
+                             # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
+                             # order to generate an accurate light curve.
+sampling_rate = 72           # <int> Calculating the physics is much faster than animating it. Therefore only
+                             # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
+                             # In other words: The simulation's number of calculated iterations and also the
+                             # length of the array with light curve data will be equal to frames * sampling_rate.
 
-[Scale]
-scope_left = 0.9 * au         # [m] <float> scope of left view plotting window is [-scope_right, scope_right]. Middle of window is (0.0, 0.0)
-scope_right = 0.9 * au         # [m] <float> scope of right view plotting window is [-scope_right, scope_right]. Middle of window is (0.0, 0.0)
-autoscaling = on            # <string> allowed values: on, off
-star_scale_left = 1.0         # [1] <float> (if autoscale off) animate stars with StarScale_left times enlarged radius in left view
-planet_scale_left =   50.0    # [1] <float> (if autoscale off) animate planets with PlanetScale_left times enlarged radius in left view
-star_scale_right = 1.0         # [1] <float> (if autoscale off) animate stars with StarScale_right times enlarged radius in right view
-planet_scale_right = 50.0      # [1] <float> (if autoscale off) animate planets with PlanetScale_right times enlarged radius in right view
-min_radius = 0.5             # [%] <float> (if autoscale on) radius of smallest body in animation relative to plot scope. radius=1 would fill the whole plot.
-max_radius = 3.0             # [%] <float> (if autoscale on) maximum radius of largest body in animation relative to plot scope. radius=1 would fill the whole plot. If necessary, scaling will be done logaritmically instead of linear
+[Scale]                      # This section controls the size of objects in the animation.
+scope_left = 31.0 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
+                             # Middle of window is (0.0, 0.0)
+scope_right = 31.0 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
+                             # Middle of window is (0.0, 0.0)
+autoscaling = on             # <string> allowed values: on, off
+star_scale_left = 100.0      # [1] <float> (if autoscale off) animate stars with StarScale_left times
+                             # enlarged radius in left view.
+planet_scale_left = 1000.0   # [1] <float> (if autoscale off) animate planets with PlanetScale_left times
+                             # enlarged radius in left view.
+star_scale_right = 100.0     # [1] <float> (if autoscale off) animate stars with StarScale_right times
+                             # enlarged radius in right view.
+planet_scale_right = 1000.0  # [1] <float> (if autoscale off) animate planets with PlanetScale_right times
+                             # enlarged radius in right view.
+min_radius = 1.2             # [%] <float> (if autoscale on) radius of smallest body in animation relative
+                             # to plot scope. radius=100 would fill the whole plot.
+max_radius = 2.6             # [%] <float> (if autoscale on) maximum radius of largest body in animation
+                             # relative to plot scope. radius=100 would fill the whole plot.
+                             # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
-x_unit = d                # <string> allowed values: s (seconds), h (hours), d (days), m (months), y (years)
+start_date = 2468000.0       # Barycentric Julian Date (TDB) at the start of the simulation
 # adjust the following plot parameters in this section only if the plots do not fit well on your screen
-figure_width = 16         # <int>   width of figure which contains all plots and animations
-figure_height = 8         # <int>   height of figure which contains all plots and animations
-xlim = 1.25               # <float> right-View and left-view both show x-values between -Xlim and + Xlim
-ylim = 1.0                # <float> right-View and left-view both show y-values between -Ylim and + Ylim
-red_dot_height = 1/13     # <float> relative height of red dot in lightcurve plot
-red_dot_width = 1/200     # <float> relative width of red dot in lightcurve plot
+figure_width = 16            # <int>   width of figure which contains all plots and animations
+figure_height = 8            # <int>   height of figure which contains all plots and animations
+xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
+ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
+red_dot_height = 1/13        # <float> relative height of red dot in light curve plot
+red_dot_width = 1/200        # <float> relative width of red dot in light curve plot
+
+[Debug]                      # For debugging purposes only. Ignore the whole section if you aren't
+                             # a curvesimulator developer.
+# debug_L = [0, 20, 40, 88]  # run funktion debug_print_points for these values of L.
+                             # First value should be 0.
+debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for these values of L.
+                                         # First value should be 0.
 
 # all following sections define physical bodies in the simulation
 # the section names define the names of the bodies
-;[ExampleBody]
-
 
 [TIC 470710327 A]
-body_type = star                         # star/planet
-mass = 6.5 * m_sun                       # [kg]
-radius = 2.0 * r_sun                     # [m]
-luminosity = 2**3.14 * l_sun             # [W]
-;startposition = 0.0, 3620798086.0, 0.0   # [m], [m], [m]
-;velocity = -235000.0, -85118.0, -12688.0 # [m/s], [m/s], [m/s]
-# Keplerian orbit parameters. Provide a, e, i, Ω. Additionally provide ϖ and L or provide ω and one of nu/ea/ma/T.
-;a = 1.00000011 * au                      # [m] semi-major axis
-e = 0.0                                  # [1] eccentricity
-i = 0.0                                  # [deg] inclination
-;longitude_of_ascending_node = -11.26064  # [deg] Ω: longitude of ascending node
-;argument_of_periapsis =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
-;longitude_of_periapsis = 102.94719       # [deg] ϖ: longitude of periapsis
-;L = 100.46435                            # [deg] mean longitude
-;ma =                                     # [deg] mean anomaly, ma = L  - ϖ
-;ea =                                     # [deg] eccentric anomaly
-;nu =                                     # [deg] true anomaly. Per definition = 270° at the time of an exoplanet's primary transit.
-;T =                                      # [s] Time of periapsis
-;t = 3600*24*365.25*1/4                   # [s] arbitrary point in time (typically time since last time of transit)
-beta = 2.3                               # Limb darkening
-color = 0.99, 0.99, 0.01                 # RGB value in animation
+body_type = star                     # star/planet
+color = 0.99, 0.01, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
+mass = 6.5 * m_sun                   # [kg]
+radius = 2.0 * r_sun                 # [m]
+luminosity = 2**3.14 * l_sun         # [W]
+limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+
 
 [TIC 470710327 B]
-body_type = star                         # star/planet
-mass = 5.9 * m_sun                       # [kg]
-radius = 1.5 * r_sun                     # [m]
-luminosity = 2**3.08 * l_sun             # [W]
-;startposition = 0.0, -3620798086.0, 0.0  # [m], [m], [m]
-;velocity = 235000.0, -85118.0, -12688.0  # [m/s], [m/s], [m/s]
-# Keplerian orbit parameters. Provide a, e, i, Ω. Additionally provide ϖ and L or provide ω and one of nu/ea/ma/T.
-;a = 1.00000011 * au                      # [m] semi-major axis
-e = 0.0                                  # [1] eccentricity
-i = 0.0                                  # [deg] inclination
-;longitude_of_ascending_node = -11.26064  # [deg] Ω: longitude of ascending node
-;argument_of_periapsis =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
-;longitude_of_periapsis = 102.94719       # [deg] ϖ: longitude of periapsis
-;L = 100.46435                            # [deg] mean longitude
-;ma =                                     # [deg] mean anomaly, ma = L  - ϖ
-;ea =                                     # [deg] eccentric anomaly
-;nu =                                     # [deg] true anomaly. Per definition = 270° at the time of an exoplanet's primary transit.
-;T =                                      # [s] Time of periapsis
-;t = 3600*24*365.25*1/4                   # [s] arbitrary point in time (typically time since last time of transit)
-beta = 2.3                               # Limb darkening
-color = 0.01, 0.01, 0.99                 # RGB value in animation
+# Mandatory parameters:
+body_type = star                     # star/planet
+color = 0.99, 0.99, 0.01             # RGB value in animation. Minimum = 0, maximum = 1.
+mass = 5.9 * m_sun                   # [kg]
+radius = 1.5 * r_sun                 # [m]
+luminosity = 2**3.08 * l_sun         # [W]
+limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+
+# if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
+#startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
+#velocity = 1.0 * v_earth, 1.0 * v_earth, 1.0 * v_earth  # [m/s], [m/s], [m/s]
+
+# -----  ORBITAL ELEMENTS  -----
+# Mandatory orbital elements:
+e = 0.0                              # [1] eccentricity
+i = 86.6                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
+                                     # in front of the sun, as well as above and behind the sun in edge view.
+
+# One of the following two parameters has to be provided.
+;a = 1.0 * au                  # [m] semi-major axis
+P = 3600 * 24 * 1.1047               # [s] Period
+
+# Two of the following three parameters have to be provided:
+longitude_of_ascending_node = 0.0    # [deg] Ω: longitude of ascending node
+longitude_of_periapsis = 0.0         # [deg] ϖ: longitude of periapsis
+#argument_of_periapsis = 0           # [deg] ω: argument of periapsis
+
+# One of the following five parameters has to be provided in order to specify the initial position on the orbit.
+#L = 0                               # [deg] mean longitude
+#nu = 0                              # [deg] true anomaly.
+#ma = 0                              # [deg] mean anomaly
+#ea = 0                              # [deg] eccentric anomaly
+T = 0                                # [s] Time of periapsis
+                                     # The absolute time of periapsis is start_date - T
+
+#t = 0                               # [t] Optional additional time difference. Default=0.
+
 
 [TIC 470710327 C]
-body_type = star                         # star/planet
-mass = 15.25 * m_sun                     # [kg]
-radius = 6.5 * r_sun                     # [m]
-luminosity = 2**4.79 * l_sun             # [W]
-;startposition = 123338343881.0, 0.0, 0.0 # [m], [m], [m]
-;velocity = 0.0, 85118.0, 12688.0         # [m/s], [m/s], [m/s]
-# Keplerian orbit parameters. Provide a, e, i, Ω. Additionally provide ϖ and L or provide ω and one of nu/ea/ma/T.
-;a = 1.00000011 * au                      # [m] semi-major axis
-e = 0.3                                  # [1] eccentricity
-i = 16.6                                 # [deg] inclination
-;longitude_of_ascending_node = -11.26064  # [deg] Ω: longitude of ascending node
-;argument_of_periapsis =                  # [deg] ω: argument of periapsis, ω = ϖ - Ω
-;longitude_of_periapsis = 102.94719       # [deg] ϖ: longitude of periapsis
-;L = 100.46435                            # [deg] mean longitude
-;ma =                                     # [deg] mean anomaly, ma = L  - ϖ
-;ea =                                     # [deg] eccentric anomaly
-;nu =                                     # [deg] true anomaly. Per definition = 270° at the time of an exoplanet's primary transit.
-;T =                                      # [s] Time of periapsis
-;t = 3600*24*365.25*1/4                   # [s] arbitrary point in time (typically time since last time of transit)
-beta = 2.3                               # Limb darkening
-color = 0.99, 0.01, 0.99                 # RGB value in animation
+body_type = star                     # star/planet
+color = 0.01, 0.99, 0.01             # RGB value in animation
+mass = 15.25 * m_sun                 # [kg]
+radius = 6.5 * r_sun                 # [m]
+luminosity = 2**4.79 * l_sun         # [W]
+limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+e = 0.3                              # [1] eccentricity
+i = 80.0                             # [deg] inclination
+P = 3600 * 24 * 52.04                # [s] Period
+longitude_of_ascending_node = 0.0    # [deg] Ω: longitude of ascending node
+longitude_of_periapsis = 0.0         # [deg] ϖ: longitude of periapsis
+T = 0                                # [s] Time of periapsis
+
