--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,4 @@
 /src/build/
 /src/curvesimulator.egg-info/
 /src/MyFirstVideo.mp4
-/animations/testing.mp4
-/animations/MyFirstVideo.mp4
-/animations/2Stars1Planet40s.mp4
-/animations/SolarSystem_i=0.mp4
-/animations/SolarSystem_i=90.mp4
-/animations/TIC470710327.mp4
+/animations/
