--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -1,7 +1,7 @@
 [Astronomical Constants]
 # do not edit this section
 # you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * au
-g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015  This parameter must be defined here!
+g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015
 au = 1.495978707e11          # [m]   <float> astronomical unit
 r_sun = 6.96342e8            # [m]   <float> solar radius
 m_sun = 1.98847e30           # [kg]  <float> solar mass +/- 0.00007
