--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -3,9 +3,9 @@
 # you may use the astronomical constants defined in this section in all following sections, e.g. scope_left = 1.9 * au
 g  = 6.67430e-11             # [m**3/kg/s**2] <float> gravitational constant +/- 0.00015
 au = 1.495978707e11          # [m]   <float> astronomical unit
-r_sun = 6.96342e8            # [m]   <float> solar radius
-m_sun = 1.98847e30           # [kg]  <float> solar mass +/- 0.00007
-l_sun = 3.83e26              # [W]   <float> solar luminosity
+r_sun = 6.96342e8            # [m]   <float> solar radius R⊙
+m_sun = 1.98847e30           # [kg]  <float> solar mass M⊙ +/- 0.00007
+l_sun = 3.83e26              # [W]   <float> solar luminosity L⊙
 r_jup = 7.1492e7             # [m]   <float> Jupiter radius
 m_jup = 1.8981246e27         # [kg]  <float> Jupiter mass
 r_earth = 6.378135e6         # [m]   <float> Earth radius
