--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -73,7 +73,7 @@ color = 0.8, 0.8, 0.8
 mass = 0.89 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening = [0.45, 0.35]  # paper contains different parameters q1, q2 for different planets?!?
+limb_darkening = [0.45, 0.35]  # paper contains different parameters q1, q2 for different planets?!? I averaged them.
 
 
 [TOI-4504b]
