--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -21,7 +21,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 1000                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 25                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -96,6 +96,7 @@ t = 3600 * 24 * 1038.458  # t0 [BJD] 2459038.458
 body_type = planet
 color = 0.66, 0.66, 0.01
 mass = 3.7672 * m_jup
+;radius = 0.000000009897 * r_jup  # make Planet c tiny in order to concentrate on planet b's transits
 radius = 0.9897 * r_jup
 e = 0.0320
 i = 89.69
