--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -71,7 +71,7 @@ debug_L = [i for i in range(0, 360, 17)] # run funktion debug_print_points for t
 # all following sections define physical bodies in the simulation
 # the section names define the names of the bodies
 
-[TestSun]
+[PrimaryStar]
 body_type = star                     # star/planet
 color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maximum = 1.
 mass = 1.0 * m_sun                   # [kg]
