--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -75,7 +75,8 @@ color = 0.99, 0.99, 0.99
 mass = 0.885 * m_sun
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening = [0.4765, 0.3495]  # paper contains different parameters q1, q2 for different planets. I averaged them.
+limb_darkening = [0.4765, 0.3495, 0.174]  # paper contains different parameters q1, q2 for different planets. I averaged them and added a third parameter so they add up to 1.
+;limb_darkening = [0.4765, 0.3495]
 
 
 [TOI-4504b]
@@ -96,8 +97,8 @@ t = 3600 * 24 * 1038.458  # t0 [BJD] 2459038.458
 body_type = planet
 color = 0.66, 0.66, 0.01
 mass = 3.7672 * m_jup
-;radius = 0.000000009897 * r_jup  # make Planet c tiny in order to concentrate on planet b's transits
-radius = 0.9897 * r_jup
+radius = 0.000000009897 * r_jup  # make Planet c tiny in order to concentrate on planet b's transits
+;radius = 0.9897 * r_jup
 e = 0.0320
 i = 89.69
 P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400
