--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -88,7 +88,7 @@ P = 3600 * 24 * 2.42614
 longitude_of_ascending_node = 0
 argument_of_periapsis = 90
 T = 0
-t = 3600 * 24 * 638.458  # t0 [BJD] 2459038.458
+t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
 
 [TOI-4504c]
@@ -103,7 +103,7 @@ P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400
 longitude_of_ascending_node = -0.8
 argument_of_periapsis = 90  # 270.9???
 T = 0
-t = 3600 * 24 * -1.4086  # first Transit T0 BJD 2458401.4086
+t = 3600 * 24 * -1.4086  # first Transit T0 BJD 2458401.4086, 1.4086 days after simulation's start date
 
 
 [TOI-4504d]
