--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -77,6 +77,7 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 mass = 1.0 * m_sun                   # [kg]
 radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
+limb_darkening_parameter_type = q    # q (Kipping parameters q1,q2) or u (quadratic law parameters u1,u2) or a (polynomial coefficients a0,a1,a2)
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
 
 
@@ -86,6 +87,7 @@ color = 0.99, 0.44, 0.22             # RGB value in animation. Minimum = 0, maxi
 mass = 0.5 * m_sun                   # [kg]
 radius = 0.7 * r_sun                 # [m]
 luminosity = 0.6 * l_sun             # [W]
+limb_darkening_parameter_type = a    # q (Kipping parameters) or u (quadratic law parameters) or a (polynomial coefficients)
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
 e = 0.8                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
