--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -14,7 +14,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
-frames = 1005                   # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -52,7 +52,7 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
-start_date = 2468000.0       # Barycentric Julian Date (TDB) at the start of the simulation
+start_date = 2468000.0       # [BJD] <float> Barycentric Julian Date (TDB) at the start of the simulation
 # adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
@@ -77,8 +77,8 @@ color = 0.99, 0.99, 0.11             # RGB value in animation. Minimum = 0, maxi
 mass = 1.0 * m_sun                   # [kg]
 radius = 1.0 * r_sun                 # [m]
 luminosity = 1.0 * l_sun             # [W]
-limb_darkening_parameter_type = q    # q (Kipping parameters q1,q2) or u (quadratic law parameters u1,u2) or a (polynomial coefficients a0,a1,a2)
-limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+limb_darkening_parameter_type = a    # q (Kipping parameters q1,q2) or u (quadratic law parameters u1,u2) or a (polynomial coefficients a0,a1,a2)
+limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients. Here a0, a1, a2
 
 
 [SecondaryStar]
@@ -87,8 +87,8 @@ color = 0.99, 0.44, 0.22             # RGB value in animation. Minimum = 0, maxi
 mass = 0.5 * m_sun                   # [kg]
 radius = 0.7 * r_sun                 # [m]
 luminosity = 0.6 * l_sun             # [W]
-limb_darkening_parameter_type = a    # q (Kipping parameters) or u (quadratic law parameters) or a (polynomial coefficients)
-limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+limb_darkening_parameter_type = q    # q (Kipping parameters) or u (quadratic law parameters) or a (polynomial coefficients)
+limb_darkening = [0.5, 0.3]          # Limb darkening coefficients. Here q1, q2
 e = 0.8                              # [1] eccentricity
 i = 90.0                             # [deg] inclination. 90°: we see orbit edge-on. >90°: planet moves below and
                                      # in front of the sun, as well as above and behind the sun in edge view.
