--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -19,7 +19,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 40                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 30                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -57,14 +57,14 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
-start_date = 2458400.0       # Barycentric Julian Date (TDB) at the start of the simulation
+start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation
 ;adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-red_dot_height = 1/13        # <float> relative height of red dot in light curve plot
-red_dot_width = 1/200        # <float> relative width of red dot in light curve plot
+red_dot_height = 1/20        # <float> relative height of red dot in light curve plot
+red_dot_width = 1/235        # <float> relative width of red dot in light curve plot
 
 
 [TOI-4504]
