--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -19,7 +19,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 6                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 6                   # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -81,6 +81,7 @@ limb_darkening_parameter_type = q
 body_type = planet
 color = 0.99, 0.01, 0.01
 mass = 10.4 * m_earth
+;radius = 0.00001  # make Planet b tiny in order to concentrate on planet c's transits
 radius = 2.691 * r_earth
 e = 0.0
 i = 87.4
@@ -95,7 +96,7 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 color = 0.66, 0.66, 0.01
 mass = 3.7672 * m_jup
-;radius = 0.1  # make Planet c tiny in order to concentrate on planet b's transits
+;radius = 0.00001  # make Planet c tiny in order to concentrate on planet b's transits
 radius = 0.9897 * r_jup
 e = 0.0320
 i = 89.69
