--- a/configurations/TIC470710327.ini
+++ b/configurations/TIC470710327.ini
@@ -14,7 +14,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TIC470710327.mp4  # <string> the resulting video is saved in this file
-frames = 3                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 300                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -78,6 +78,7 @@ mass = 6.5 * m_sun                   # [kg]
 radius = 2.0 * r_sun                 # [m]
 luminosity = 2**3.14 * l_sun         # [W]
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+limb_darkening_parameter_type = a
 ;startposition = 0.0, 3620798086.0, 0.0
 ;velocity = -235000.0, -85118.0, -12688.0
 ;e = 0.0                              # [1] eccentricity
@@ -97,6 +98,7 @@ mass = 5.9 * m_sun                   # [kg]
 radius = 1.5 * r_sun                 # [m]
 luminosity = 2**3.08 * l_sun         # [W]
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+limb_darkening_parameter_type = a
 
 # if the state vector (startposition and velocity) is provided, no Kepler orbit parameters have to be provided
 #startposition = 1.0 * au, 1.0 * au, 1.0 * au  # [m], [m], [m]
@@ -138,6 +140,7 @@ mass = 15.25 * m_sun                 # [kg]
 radius = 6.5 * r_sun                 # [m]
 luminosity = 2**4.79 * l_sun         # [W]
 limb_darkening = [0.3, 0.9, -0.2]    # Limb darkening coefficients a0, a1, ..., an
+limb_darkening_parameter_type = a
 e = 0.3                              # [1] eccentricity
 i = 74.0                             # [deg] inclination
 P = 3600 * 24 * 52.04                # [s] Period
