--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -20,11 +20,11 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-frames = 100                   # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 6                   # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 200                      # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 3600                      # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -32,7 +32,7 @@ dt = 200                      # [s] <int> real time difference between simulatio
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 200000         # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 1000000         # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -96,6 +96,7 @@ limb_darkening_parameter_type = q
 body_type = planet
 color = 0.66, 0.66, 0.01
 mass = 3.7672 * m_jup
+;radius = 1000
 radius = 0.9897 * r_jup
 e = 0.0320
 i = 89.69
@@ -110,12 +111,16 @@ t = 3600 * 24 * -1.4086  # first Transit T0 BJD 2458401.4086, 1.4086 days after 
 body_type = planet
 color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup
+;radius = 1000
 radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445
-i = 91.5
-;i = 84.74
+i = 84.74
 P = 3600 * 24 * 40.5634  # valid for epoch BJD = 2458400
 longitude_of_ascending_node = 0
 argument_of_periapsis = 90  # 98.3???
 T = 0
-t = 0  # Where is planet d at epoch BJD = 2458400???
+;t = 0  # Where is planet d at epoch BJD = 2458400???
+;t = 3600 * 24 * -20.2817  # Shifted half a period
+;t = 3600 * 24 * -10.1408  # Shifted a quarter period
+;t = 3600 * 24 * -5.0704  # Shifted a quarter period
+t = 3600 * 24 * -1.4086  # Shifted a quarter period
