--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -20,11 +20,11 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-frames = 10                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 1                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 1000                      # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 10                      # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -32,7 +32,7 @@ dt = 1000                      # [s] <int> real time difference between simulati
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 300000         # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 120000000    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
