--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -13,6 +13,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular)
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
+comment = "You can use this comment for example as diagram title in your result plots"
 video_file = ../animations/MyFirstVideo.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/MyFirstResult.json  # <string> simulation results like transit times are saved in this file
 frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
