--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -18,9 +18,10 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
+comment = TOI-4504d starts at same angle as TOI-4504c
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 24                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -32,7 +33,7 @@ dt = 30                      # [s] <int> real time difference between simulation
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 6#00000    # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 60000    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -119,8 +120,7 @@ P = 3600 * 24 * 40.5634  # valid for epoch BJD = 2458400
 longitude_of_ascending_node = 0
 argument_of_periapsis = 90  # 98.3???
 T = 0
-;t = 0  # Where is planet d at epoch BJD = 2458400???
-t = 3600 * 24 * -20.2817  # Shifted half a period
-;t = 3600 * 24 * -10.1408  # Shifted a quarter period
-;t = 3600 * 24 * -5.0704  # Shifted an eighth period
-;t = 3600 * 24 * -1.4086  # Same position as planet c
+;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.5  # TOI-4504d start opposite of TOI-4504c
+;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.25  # TOI-4504d starts a quarter orbit "in front of" TOI-4504c
+;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * -0.25  # TOI-4504d starts a quarter orbit "behind" TOI-4504c
+t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.0  # TOI-4504d starts at same angle as TOI-4504c
