--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -18,7 +18,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-comment = TOI-4504d starts at same angle as TOI-4504c
+comment = d 1/4 ifo c, planet c mass -3stdv
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
 frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
@@ -73,7 +73,7 @@ red_dot_width = 1/235        # <float> relative width of red dot in light curve 
 [TOI-4504]
 body_type = star
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun
+mass = (0.885 - 0 * 0.04) * m_sun       # +0,06 -0,04
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
 limb_darkening = [0.4765, 0.3495]  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
@@ -97,7 +97,7 @@ limb_darkening_parameter_type = q
 [TOI-4504c]
 body_type = planet
 color = 0.66, 0.66, 0.01
-mass = 3.7672 * m_jup
+mass = (3.7672 - 0 * 0.18) * m_jup   # +- 0.18
 ;radius = 1000
 radius = 0.9897 * r_jup
 e = 0.0320
@@ -122,6 +122,6 @@ longitude_of_ascending_node = 0
 argument_of_periapsis = 90  # 98.3???
 T = 0
 ;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.5  # TOI-4504d start opposite of TOI-4504c
-;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.25  # TOI-4504d starts a quarter orbit "in front of" TOI-4504c
-;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * -0.25  # TOI-4504d starts a quarter orbit "behind" TOI-4504c
-t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.0  # TOI-4504d starts at same angle as TOI-4504c
+t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.25  # TOI-4504d starts a quarter orbit in front of TOI-4504c
+;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * -0.25  # TOI-4504d starts a quarter orbit behind TOI-4504c
+;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.0  # TOI-4504d starts at same angle as TOI-4504c
