--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -73,7 +73,7 @@ red_dot_width = 1/235        # <float> relative width of red dot in light curve 
 [TOI-4504]
 body_type = star
 color = 0.99, 0.99, 0.99
-mass = (0.885 - 0 * 0.04) * m_sun       # +0,06 -0,04
+mass = (0.885 - 0 * 0.05) * m_sun       # +-0.05
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
 limb_darkening = [0.4765, 0.3495]  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
@@ -97,12 +97,12 @@ limb_darkening_parameter_type = q
 [TOI-4504c]
 body_type = planet
 color = 0.66, 0.66, 0.01
-mass = (3.7672 - 0 * 0.18) * m_jup   # +- 0.18
+mass = (3.7672 - 0 * 0.18) * m_jup  # +-0.18
 ;radius = 1000
 radius = 0.9897 * r_jup
-e = 0.0320
-i = 89.69
-P = 3600 * 24 * 82.5438  # valid for epoch BJD = 2458400
+e = 0.0320 - 0 * 0.0015  # +-0.0015
+i = 89.69 - 0 * 0.03  # +-0.03
+P = 3600 * 24 * (82.5438 - 0 * 0.0163) # valid for epoch BJD = 2458400    +-0.0163
 longitude_of_ascending_node = -0.8
 argument_of_periapsis = 90  # 270.9???
 T = 0
