--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -21,9 +21,9 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 comment = params as in Vitkova paper
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
-frames = 1#36                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
-fps = 4                     # <int> frames per second in video. Proportional to the velocity of the
+fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
 dt = 600                      # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
