--- a/configurations/Sim001.ini
+++ b/configurations/Sim001.ini
@@ -83,7 +83,7 @@ limb_darkening_parameter_type = q
 body_type = planet
 color = 0.99, 0.66, 0.33
 mass = 1.0 * m_jup
-radius = 1.0 * r_jup
+radius = 0.1 * r_sun
 e = 0.0
 i = 89.0
 P = 3600 * 24 * 50.0
@@ -96,10 +96,10 @@ nu = 90.0
 body_type = planet
 color = 0.01, 0.99, 0.6
 mass = 1.0 * m_jup
-radius = 1.0 * r_jup
+radius = 0.1 * r_sun
 e = 0.0
 i = 90.0
-P = 3600 * 24 * 100.0
+P = 3600 * 24 * 5000.0
 longitude_of_ascending_node = 0.0
 argument_of_periapsis = 0.0
 nu = 150.0
